# my-nix-config

./: README.md  configuration.nix  flake.nix  hardware-configuration.nix  home.nix  shell.nix
home/: alacritty.toml  alacritty.yaml  home.nix  hyprpaper.conf  polybar.ini  waybar.css
home/xmonad-config/: shell.nix  xmonad-config.cabal  xmonad.hs
scripts/: apply.sh
system/: common.nix  configuration.nix  hardware-configuration.nix
system/desktop/: default.nix  hardware.nix  keychron-fix.nix
system/laptop/: default.nix  hardware.nix
zsh-custom/: panda-lambda.zsh-theme
