cabal-version:      3.0
name:               xmonad-config
version:            0.1.0.0
author:             David Richey
maintainer:         darichey1@gmail.com

executable xmonad
    main-is:          xmonad.hs
    build-depends:    base
                    , xmonad
                    , xmonad-contrib
    default-language: Haskell2010
